public class CredentialLeak
{
    public string username;
    public string password;
    public string context;
}
