using UnityEngine;

public class FileReference
{
    public FileTypeEnum FileType;
    public string FileName;
    public string FileContent;
    public string FilePath;
    public bool IsFileExists;
    public Sprite FileIcon;
    public Sprite FileContentImage;
}
