using UnityEngine;

public class MachinePrefabHandler : MonoBehaviour
{
}
