public class PortInfo
{
    public int port;
    public string service;
    public bool isOpen;
}
