using UnityEngine;

public class SoFileReference : ScriptableObject
{
    public FileReference FileReference;
}
