using System;
using System.Collections.Generic;
using System.Linq;
using UnityEngine;
using UnityEngine.Events;

[Serializable] public class SpriteEvent : UnityEvent<Sprite> {}

public class CommandProcessor : MonoBehaviour
{
    [SerializeField] private CommandInputSystem commandInputSystem;
    [SerializeField] private CommandOutputSystem commandOutputSystem;
    [SerializeField] private ImageRegistry imageRegistry;
    [SerializeField] private MachineRegistry machineRegistry;
    [SerializeField] private TextAsset startingFileSystemJson;
    
    private LinuxCommand _linuxCommand;

    // private VirtualFileSystem _vfs;
    private Dictionary<string, Action<string[]>> _commands = new();
    private string _result;

    public UnityEvent<string> onCommandProcessed;
    // public SpriteEvent onImageOpened; // UI subscribes to this to show images

    private void Awake()
    {
        _linuxCommand = new LinuxCommand(machineRegistry, startingFileSystemJson);
        _commands = _linuxCommand.GetCommandList;
  
    }

    private void OnEnable()
    {
        _result = GetHeader();
        commandInputSystem.OnCommandSubmitted.AddListener(ProcessCommand);
    }

    private void OnDisable()
    {
        commandInputSystem.OnCommandSubmitted.RemoveListener(ProcessCommand);
    }

    private string GetHeader() => $"user@localhost > {_linuxCommand.GetCurrentPathString()}\n$ ";

    private void ProcessCommand(string command)
    {
        _result += command + "\n";

        var trimmed = command.Trim();
        if (!string.IsNullOrEmpty(trimmed))
        {
            var parts = trimmed.Split(' ', 2);
            var cmd = parts[0].ToLower();
            var args = parts.Length > 1
                ? parts[1].Split(' ', StringSplitOptions.RemoveEmptyEntries)
                : Array.Empty<string>();

            if (_commands.TryGetValue(cmd, out var handler))
            {
                // Execute Linux command
                handler(args);

                // Get the output generated by LinuxCommand
                string commandResult = _linuxCommand.GetResult();

                if (!string.IsNullOrEmpty(commandResult))
                {
                    _result += commandResult;

                    // Clear LinuxCommand's temporary result
                    _linuxCommand.ClearResult();
                }
            }
            else
                Print($"{cmd}: command not found");
        }

        _result += GetHeader();
        onCommandProcessed?.Invoke(_result);
    }

    private void Print(string text) => _result += text + "\n";

}