using System;

public abstract class ExploitCommandBase
{
    protected readonly Action<string> Print;

    protected ExploitCommandBase(Action<string> print)
    {
        Print = print;
    }

    public abstract string CommandName { get; }

    public abstract void Execute(string[] args);
}