using System;

public class NmapCommand
{
    private readonly MachineRegistry _machineRegistry;
    private readonly Action<string> _print;

    public NmapCommand(MachineRegistry machineRegistry, Action<string> print)
    {
        _machineRegistry = machineRegistry;
        _print = print;
    }

    public void Execute(string[] args)
    {
        if (args.Length == 0)
        {
            Print("nmap: missing target IP");
            return;
        }

        string ip = args[0];

        var machine = _machineRegistry.GetByIp(ip);

        if (machine == null)
        {
            Print($"nmap: could not resolve host {ip}");
            return;
        }

        Print($"Starting Nmap scan on {ip} ({machine.hostname})...");
        Print($"OS detected: {machine.os}");
        Print("PORT     STATE    SERVICE");

        foreach (var p in machine.ports)
        {
            Print(
                $"{p.port,-8} " +
                $"{(p.isOpen ? "open" : "closed"),-8} " +
                $"{p.service}"
            );
        }

        Print("Nmap scan complete.");
    }

    private void Print(string text)
    {
        _print?.Invoke(text);
    }
}